--- a/pages/settings.html
+++ b/pages/settings.html
@@ -186,54 +186,69 @@
           </div>
         </div>
 
-
-                <!-- Display Settings -->
-                <div class="settings-section">
-                  <h2>Display Settings</h2>
-                  <div class="settings-group">
-                      <div class="setting-item">
-                          <label for="theme">Theme</label>
-                          <select id="theme">
-                              <option value="light">Light</option>
-                              <option value="dark">Dark</option>
-                              <option value="system">System Default</option>
-                          </select>
-                      </div>
-                  </div>
-              </div>
-
+        <div class="settings-section">
+          <h2>User Profile</h2>
+          <div class="settings-group">
             <div class="setting-item">
-              <label for="dateFormat">Date Format:</label>
-              <select id="dateFormat">
-                <option value="MM/DD/YYYY">MM/DD/YYYY</option>
-                <option value="DD/MM/YYYY">DD/MM/YYYY</option>
-                <option value="YYYY-MM-DD">YYYY-MM-DD</option>
-              </select>
+              <label for="username">Username</label>
+              <input type="text" id="username" class="form-input" placeholder="Enter new username">
+              <button id="updateUsername" class="btn-secondary">Update Username</button>
             </div>
-                            <!-- Notification Settings -->
-                            <div class="settings-section">
-                              <h2>Notifications</h2>
-                              <div class="settings-group">
-                                  <div class="setting-item checkbox">
-                                      <label>
-                                          <input type="checkbox" id="emailNotifications">
-                                          Email notifications
-                                      </label>
-                                  </div>
-                                  <div class="setting-item checkbox">
-                                      <label>
-                                          <input type="checkbox" id="profitAlerts">
-                                          Profit target alerts
-                                      </label>
-                                  </div>
-                                  <div class="setting-item checkbox">
-                                      <label>
-                                          <input type="checkbox" id="lossAlerts">
-                                          Stop loss alerts
-                                      </label>
-                                  </div>
-                              </div>
-                          </div>
+            <div class="setting-item">
+              <label for="email">Email Address</label>
+              <input type="email" id="email" class="form-input" placeholder="Enter new email">
+              <button id="updateEmail" class="btn-secondary">Update Email</button>
+            </div>
+            <div class="setting-item">
+              <label for="currentPassword">Current Password</label>
+              <input type="password" id="currentPassword" class="form-input" placeholder="Enter current password">
+            </div>
+            <div class="setting-item">
+              <label for="newPassword">New Password</label>
+              <input type="password" id="newPassword" class="form-input" placeholder="Enter new password">
+            </div>
+            <div class="setting-item">
+              <label for="confirmPassword">Confirm New Password</label>
+              <input type="password" id="confirmPassword" class="form-input" placeholder="Confirm new password">
+              <button id="updatePassword" class="btn-secondary">Update Password</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Display Settings -->
+        <div class="settings-section">
+          <h2>Display Settings</h2>
+          <div class="settings-group">
+              <div class="setting-item">
+                  <label for="theme">Theme</label>
+                  <select id="theme">
+                      <option value="light">Light</option>
+                      <option value="dark">Dark</option>
+                      <option value="system">System Default</option>
+                  </select>
+              </div>
+          </div>
+        </div>
+
+        <div class="setting-item">
+          <label for="dateFormat">Date Format:</label>
+          <select id="dateFormat">
+            <option value="MM/DD/YYYY">MM/DD/YYYY</option>
+            <option value="DD/MM/YYYY">DD/MM/YYYY</option>
+            <option value="YYYY-MM-DD">YYYY-MM-DD</option>
+          </select>
+        </div>
+
+        <!-- Notification Settings -->
+        <div class="settings-section">
+          <h2>Notifications</h2>
+          <div class="settings-group">
+              <div class="setting-item checkbox">
+                  <label>
+                      <input type="checkbox" id="emailNotifications">
+                      Email notifications
+                  </label>
+              </div>
           </div>
         </div>
 
